# prod-ready

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DISTRIBUTION_STATUS.md  GETTING_STARTED.md  MANIFEST.in  Makefile  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
Formula/: prod-ready.rb
docs/man/: prod-ready.1
src/prod_ready/: __init__.py
src/prod_ready/cli/: __init__.py  main.py
src/prod_ready/core/: __init__.py  audit.py  engine.py  models.py  plugin.py  rubric.py
src/prod_ready/output/: __init__.py  formatters.py
src/prod_ready/rubrics/web_api/: v1.0.yaml
tests/: __init__.py
tests/integration/: test_cli.py  test_validation.py
tests/unit/: test_engine.py  test_models.py  test_rubric.py
